[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-helper"
version = "0.3.0"
description = "Close duplicate and already-reviewed PR tabs in Chrome using chrome-cli and Lightpanda"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightpanda-py>=0.2.7",
    "tqdm>=4.66",
]

[project.scripts]
review-helper = "review_helper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["review_helper*"]
